--- a/package.json
+++ b/package.json
@@ -4,12 +4,28 @@
   "description": "elctronApp",
   "main": "main.js",
   "scripts": {
-    "start": "electron .",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "electron-forge start",
+    "dev":"set NODE_ENV=development&& electron-forge start",
+    "build": "npx electron-forge import",
+    "package": "electron-forge package",
+    "make": "electron-forge make"
   },
   "author": "CHOI DAE GEON",
   "license": "ISC",
   "devDependencies": {
-    "electron": "^29.1.4"
+    "@electron-forge/cli": "^7.3.0",
+    "@electron-forge/maker-deb": "^7.3.0",
+    "@electron-forge/maker-rpm": "^7.3.0",
+    "@electron-forge/maker-squirrel": "^7.3.0",
+    "@electron-forge/maker-zip": "^7.3.0",
+    "@electron-forge/plugin-auto-unpack-natives": "^7.3.0",
+    "@electron-forge/plugin-fuses": "^7.3.0",
+    "@electron/fuses": "^1.7.0",
+    "electron": "^29.1.4",
+    "electron-reload": "^2.0.0-alpha.1",
+    "electron-reloader": "^1.2.3"
+  },
+  "dependencies": {
+    "electron-squirrel-startup": "^1.0.0"
   }
 }
